# paranimator

./: .clang-format  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
data/: config.json  end.par
libs/: CMakeLists.txt
libs/ParFile/: CMakeLists.txt  Config.cpp  Interpolant.cpp  Interpolator.cpp  Json.cpp  ParFile.cpp  Script.cpp
libs/ParFile/include/ParFile/: Config.h  Interpolant.h  Interpolator.h  Json.h  ParFile.h  Script.h
tests/: CMakeLists.txt
tests/ParFile/: CMakeLists.txt  TestConfig.cpp  TestInterpolant.cpp  TestInterpolator.cpp  TestParFile.cpp  TestParSet.cpp  TestParameter.cpp  TestScript.cpp  config.json.in  from.par.in  test.cpp  test.h.in  to.par.in
tools/: CMakeLists.txt  main.cpp
